--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/postgres": "^0.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.3.2",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react": "^18",
