--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.4",
-    "@prisma/client": "^5.8.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -23,6 +22,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.3.2",
     "lucide-react": "^0.309.0",
+    "mongoose": "^8.1.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -40,7 +40,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
