--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.3.2",
     "lucide-react": "^0.309.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
     "react": "^18",
