--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/postgres": "^0.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.3.2",
     "lucide-react": "^0.309.0",
     "mongodb": "^6.3.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
