--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "dotenv": "^16.3.2",
+    "emoji-mart": "^5.5.2",
     "lucide-react": "^0.309.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
