--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-input-emoji": "^5.6.5",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
