--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@clerk/nextjs": "^4.29.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "@vercel/postgres": "^0.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -33,7 +35,6 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-input-emoji": "^5.6.5",
-    "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.2.0",
