check if its fixed

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "svix": "^1.15.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "tmp": "^0.2.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
@@ -48,6 +49,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/tmp": "^0.2.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
