--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/socket.io-client": "^3.0.0",
     "@vercel/postgres": "^0.5.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "dotenv": "^16.3.2",
@@ -29,6 +30,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
+    "next-cloudinary": "^5.20.0",
     "ngrok": "^5.0.0-beta.2",
     "react": "^18",
     "react-dom": "^18",
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@types/formidable": "^3.4.5",
     "@types/lodash": "^4.14.202",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
